# GrowthAgent

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  compose.release.yml  docker-compose.yml  go.mod  reddit_autonomous_growth_agent_mvp.md
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
ThreadPilot/: .env.example  README.md
ThreadPilot/tests/: test_scoring.py
ThreadPilot/workers/: README.md
apps/api/: alembic.ini  pyproject.toml
apps/api/alembic/: env.py  script.py.mako
apps/api/alembic/versions/: 0001_initial.py  0002_product_ordering_retention.py  0003_xiaohongshu_content.py  0004_xiaohongshu_confirmations.py  0005_xiaohongshu_account_quota.py  0006_clear_generated_disclosures.py  0007_growth_workflow.py  0008_xiaohongshu_automation.py  0009_remove_manual_confirmations.py  0010_app_settings.py
apps/api/app/: automation.py  config.py  database.py  fixtures.py  ingestion.py  main.py  models.py  product_lifecycle.py  prompting.py  providers.py  runtime_settings.py  schemas.py  services.py  worker.py  xiaohongshu_client.py  xiaohongshu_service.py
apps/web/: next.config.ts  package-lock.json  package.json  tsconfig.json
cmd/threadpilot-launcher/: main.go
docs/: architecture.md  policy.md  runbook.md
infra/docker/: api.Dockerfile  api.release.Dockerfile  web.Dockerfile  (+1 more)
tests/: test_api_workflow.py  test_ingestion.py  test_policy.py  test_product_brain.py  test_product_lifecycle.py  test_provider.py  test_runtime_settings.py  test_scoring.py  test_xiaohongshu_client.py  test_xiaohongshu_workflow.py
(+74 files in other folders)
