[project]
name = "growthagent-api"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115", "uvicorn[standard]>=0.30", "pydantic-settings>=2.5",
  "sqlalchemy[asyncio]>=2.0", "asyncpg>=0.29", "alembic>=1.13",
  "httpx>=0.27", "beautifulsoup4>=4.12", "celery[redis]>=5.4",
  "openai>=1.50", "email-validator>=2.2", "python-multipart>=0.0.9",
  "cryptography>=43"
]
[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.24", "aiosqlite>=0.20", "ruff>=0.6"]

[build-system]
requires = ["setuptools>=70"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
exclude = ["alembic*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = [".", "../.."]
[tool.ruff]
line-length = 100
