[project]
name = "growthagent-api"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.139.2", "uvicorn[standard]>=0.51.0", "pydantic-settings>=2.14.2",
  "sqlalchemy[asyncio]>=2.0.51", "asyncpg>=0.31.0", "alembic>=1.18.5",
  "httpx>=0.28.1", "beautifulsoup4>=4.15.0", "celery[redis]>=5.6.3",
  "openai>=2.46.0", "email-validator>=2.3.0", "python-multipart>=0.0.32",
  "cryptography>=49.0.0"
]
[project.optional-dependencies]
dev = ["pytest>=9.1.1", "pytest-asyncio>=1.4.0", "aiosqlite>=0.22.1", "ruff>=0.15.22"]

[build-system]
requires = ["setuptools>=83.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
exclude = ["alembic*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = [".", "../.."]
[tool.ruff]
line-length = 100
